--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git log"
+    "deploy": "npm version minor & git push"
   },
   "eslintConfig": {
     "extends": [
