--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "scroll-event-handler": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
